Refactor project structure and enhance detection features
- Updated project plan to specify OpenCV version to 4.5.5.
- Refined core class design, including changes to FilterBase and DetectorBase interfaces.
- Introduced Detection and DetectionRenderer classes for improved detection result handling.
- Implemented YOLODetector class for YOLOv8 model integration.
- Added various filter classes (Canny, Gaussian, Grayscale, HistEq, Threshold) with parameter management.
- Enhanced VideoRecorder and ResultExporter for better recording and exporting functionalities.
- Established a comprehensive VideoController to manage video sources, filters, and detection processes.
- Updated UI components to reflect new functionalities and improved user interaction.
- Ensured thread safety and performance optimizations across the application.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,8 @@
     "cmake.defaultKit": "Qt 6.10.2 MinGW 13.1.0 64-bit",
     "cmake.configureSettings": {
         "CMAKE_TOOLCHAIN_FILE": "${workspaceFolder}/cmake/toolchain-qt6-mingw64.cmake"
-    }
+    },
+    "cmake.configureEnvironment": {
+        "CMAKE_PREFIX_PATH": "${workspaceFolder}/libs/OpenCV-MinGW-Build-OpenCV-4.5.5-x64/x64/mingw/lib" 
+    },
 }
