--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
+# ────────────────────────────────────────────
 # Build output
+# ────────────────────────────────────────────
 build/
 out/
 *.exe
@@ -7,8 +9,13 @@ out/
 *.obj
 *.a
 *.lib
+*.pdb
+*.ilk
+*.exp
 
+# ────────────────────────────────────────────
 # CMake generated
+# ────────────────────────────────────────────
 CMakeCache.txt
 CMakeFiles/
 cmake_install.cmake
@@ -19,7 +26,9 @@ CPackSourceConfig.cmake
 Makefile
 _deps/
 
+# ────────────────────────────────────────────
 # Qt generated / autogen
+# ────────────────────────────────────────────
 *_autogen/
 moc_*.cpp
 moc_*.cpp.d
@@ -36,25 +45,73 @@ ui_*.h
 *.creator.user*
 CMakeLists.txt.user
 
+# ────────────────────────────────────────────
 # VS Code
+# ────────────────────────────────────────────
 .vscode/launch.json
 .vscode/*.log
+# 保留 .vscode/settings.json 和 extensions.json（团队共享配置）
 
+# ────────────────────────────────────────────
 # MinGW / GCC
+# ────────────────────────────────────────────
 *.d
 *.su
+*.map
 
+# ────────────────────────────────────────────
 # Windows
+# ────────────────────────────────────────────
 Thumbs.db
 Desktop.ini
 $RECYCLE.BIN/
 *.lnk
+# Windows 空设备（VS Code 有时在工作区根目录显示的虚拟条目）
+nul
 
+# ────────────────────────────────────────────
 # macOS
+# ────────────────────────────────────────────
 .DS_Store
+.AppleDouble
+.LSOverrideDirectory
 
+# ────────────────────────────────────────────
 # Logs & temp
+# ────────────────────────────────────────────
 *.log
 *.tmp
 *.swp
+*.bak
 *~
+
+# ────────────────────────────────────────────
+# 深度学习模型文件（体积大，单独管理）
+# ────────────────────────────────────────────
+resources/models/
+*.onnx
+*.pt
+*.pth
+*.weights
+*.wts
+*.engine
+*.trt
+*.bin
+
+# ────────────────────────────────────────────
+# 运行时输出目录（截图、录制、导出结果）
+# ────────────────────────────────────────────
+output/
+recordings/
+screenshots/
+exports/
+
+# ────────────────────────────────────────────
+# 测试二进制产物
+# ────────────────────────────────────────────
+tests/build/
+
+# ────────────────────────────────────────────
+# OpenCV / third-party prebuilt libs（大体积二进制）
+# ────────────────────────────────────────────
+libs/
