Remove obsolete design documents for Filter, GUI, and Video Source modules; update MainWindow implementation to clean up commented sections and improve readability.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# ────────────────────────────────────────────
-# Build output
-# ────────────────────────────────────────────
 build/
 out/
 *.exe
@@ -13,9 +10,6 @@ out/
 *.ilk
 *.exp
 
-# ────────────────────────────────────────────
-# CMake generated
-# ────────────────────────────────────────────
 CMakeCache.txt
 CMakeFiles/
 cmake_install.cmake
@@ -26,9 +20,6 @@ CPackSourceConfig.cmake
 Makefile
 _deps/
 
-# ────────────────────────────────────────────
-# Qt generated / autogen
-# ────────────────────────────────────────────
 *_autogen/
 moc_*.cpp
 moc_*.cpp.d
@@ -37,7 +28,6 @@ ui_*.h
 *.moc
 *.qm
 
-# Qt Creator
 *.pro.user
 *.pro.user.*
 *.qbs.user
@@ -45,23 +35,14 @@ ui_*.h
 *.creator.user*
 CMakeLists.txt.user
 
-# ────────────────────────────────────────────
-# VS Code
-# ────────────────────────────────────────────
 .vscode/launch.json
 .vscode/*.log
 # 保留 .vscode/settings.json 和 extensions.json（团队共享配置）
 
-# ────────────────────────────────────────────
-# MinGW / GCC
-# ────────────────────────────────────────────
 *.d
 *.su
 *.map
 
-# ────────────────────────────────────────────
-# Windows
-# ────────────────────────────────────────────
 Thumbs.db
 Desktop.ini
 $RECYCLE.BIN/
@@ -69,25 +50,16 @@ $RECYCLE.BIN/
 # Windows 空设备（VS Code 有时在工作区根目录显示的虚拟条目）
 nul
 
-# ────────────────────────────────────────────
-# macOS
-# ────────────────────────────────────────────
 .DS_Store
 .AppleDouble
 .LSOverrideDirectory
 
-# ────────────────────────────────────────────
-# Logs & temp
-# ────────────────────────────────────────────
 *.log
 *.tmp
 *.swp
 *.bak
 *~
 
-# ────────────────────────────────────────────
-# 深度学习模型文件（体积大，单独管理）
-# ────────────────────────────────────────────
 resources/models/
 *.onnx
 *.pt
@@ -98,20 +70,13 @@ resources/models/
 *.trt
 *.bin
 
-# ────────────────────────────────────────────
-# 运行时输出目录（截图、录制、导出结果）
-# ────────────────────────────────────────────
 output/
 recordings/
 screenshots/
 exports/
 
-# ────────────────────────────────────────────
-# 测试二进制产物
-# ────────────────────────────────────────────
 tests/build/
 
-# ────────────────────────────────────────────
-# OpenCV / third-party prebuilt libs（大体积二进制）
-# ────────────────────────────────────────────
 libs/
+
+docs/
